--- a/practice/scrapingV14.ipynb
+++ b/practice/scrapingV14.ipynb
@@ -1629,7 +1629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 241,
    "id": "9a3f315a",
    "metadata": {},
    "outputs": [],
@@ -1655,7 +1655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 242,
    "id": "5c4a68bf",
    "metadata": {},
    "outputs": [
@@ -1991,13 +1991,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 243,
    "id": "ab48eb20",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "def tsne_viz_3d(df, n, stop='english'):\n",
+    "def tsne_viz(df, n, stop='english'):\n",
     "   \n",
     "    cvec = TfidfVectorizer(ngram_range=(n,n), stop_words=stop)\n",
     "    vectorized_matrix = cvec.fit_transform(df['cleaned_post'])\n",
@@ -2025,7 +2025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 244,
    "id": "314cd923",
    "metadata": {},
    "outputs": [
@@ -2055,7 +2055,7 @@
     }
    ],
    "source": [
-    "tsne_viz_3d(df, 3, stop='english')"
+    "tsne_viz(df, 3, stop='english')"
    ]
   },
   {
@@ -2066,7 +2066,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "def tsne_viz_3d_interactive(df, n, stop='english'):\n",
+    "def tsne_vizinter(df, n, stop='english'):\n",
     "\n",
     "    cvec = TfidfVectorizer(ngram_range=(n-1,n), stop_words=stop)\n",
     "    vectorized_matrix = cvec.fit_transform(df['cleaned_post'])\n",
@@ -7786,7 +7786,7 @@
     }
    ],
    "source": [
-    "tsne_viz_3d_interactive(df, 3, stop='english')"
+    "tsne_vizinter(df, 3, stop='english')"
    ]
   },
   {
@@ -7805,7 +7805,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "def tsne_viz_3d_interactive_with_index(df, n, stop='english'):\n",
+    "def tsne_viz_index(df, n, stop='english'):\n",
     "\n",
     "    cvec = TfidfVectorizer(ngram_range=(n-1,n), stop_words=stop)\n",
     "    vectorized_matrix = cvec.fit_transform(df['cleaned_post'])\n",
@@ -18305,7 +18305,7 @@
     }
    ],
    "source": [
-    "tsne_viz_3d_interactive_with_index(df, 2, stop='english')"
+    "tsne_viz_index(df, 2, stop='english')"
    ]
   },
   {
@@ -28883,7 +28883,7 @@
     }
    ],
    "source": [
-    "tsne_viz_3d_interactive_with_index(df, 3, stop='english')"
+    "tsne_viz_index(df, 3, stop='english')"
    ]
   },
   {
@@ -39470,7 +39470,7 @@
     }
    ],
    "source": [
-    "tsne_viz_3d_interactive_with_index(df2, 3, stop='english')"
+    "tsne_viz_index(df2, 3, stop='english')"
    ]
   },
   {
@@ -50020,7 +50020,7 @@
     }
    ],
    "source": [
-    "tsne_viz_3d_interactive_with_index(df2, 4, stop='english')"
+    "tsne_viz_index(df2, 4, stop='english')"
    ]
   },
   {
@@ -50041,7 +50041,7 @@
    "id": "5667faa9",
    "metadata": {},
    "source": [
-    "__The TSNE visulization showes that unigram and bigram fetures gives us the best clusters.__\n",
+    "__The TSNE visualization shows that unigram and bigram features gives us the best clusters.__\n",
     "\n",
     "![unigramandbigram.png](attachment:unigramandbigram.png)"
    ]
@@ -50095,7 +50095,8 @@
     "    'logit__solver': ['liblinear']\n",
     "\n",
     "\n",
-    "}\n"
+    "}\n",
+    "  "
    ]
   },
   {
@@ -50357,14 +50358,6 @@
    "source": [
     "gs_tvec.score(X_test, y_test)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9b85bf1c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
